[package]
name = "kissa-plugin-{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
license = "MIT"
description = "plugin for kissabot"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "^0.9.0-rc.3", features = ["lua54", "parking_lot"] }