[package]
name = "kissa-plugin-{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
license = "MIT"
description = "plugin for kissabot"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kissa = "^0.0.2"

[lib]
crate-type = ["dylib"]
